--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,35 +1,68 @@
 .container {
-  padding: 0 2rem;
+  margin-bottom: 14rem;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 72rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.heroImage{
+  position: absolute;
+  top: 0px;
+  z-index: 1;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+@media (min-width: 640px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .main {
+    margin-top: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+@media (min-width: 768px) {
+  .container {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .main {
+    margin-top: 4rem;
+  }
+
+  .heroImage{
+    right: 20%;
+  }
 }
 
-.title,
-.description {
-  text-align: center;
+@media (min-width: 1024px) {
+  .container {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+  .main {
+    margin-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .heroImage{
+    right: 20%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .main {
+    margin-top: 7rem;
+  }
 }
